# kacha

./: .gitignore  APPSTORE.md  CONTRIBUTING.md  DAO_STRATEGY.md  INTEGRATION_PLAN.md  README.md  STRATEGY.md
.github/workflows/: ci.yml
articles/: article_beds24_smartlock.md  article_e2e_wifi_sharing.md  article_swiftui_minpaku.md
firmware/: Cargo.toml  safety_config.yml  sdkconfig.defaults
firmware-band/: Cargo.toml  build.rs
firmware-band/.cargo/: config.toml
firmware-band/src/: ble.rs  fall_detect.rs  main.rs  nfc.rs  spo2.rs  streak.rs  vibrate.rs
firmware/.cargo/: config.toml
firmware/src/: local_ble.rs  main.rs  signing.rs  timeline.rs
firmware/src/cloud/: mod.rs
firmware/src/safety/: circadian.rs  mod.rs  streak.rs  weather.rs
firmware/src/sensors/: mod.rs
firmware/src/storage/: mod.rs
hardware/: B2B_PRICING.md  BAND_FIRMWARE_SPEC.md  BAND_SCHEMATIC_NOTES.md  BED_SENSOR_OPTION.md  BOM.csv  BOM_BAND.csv  BOM_LITE.csv  DESIGN.md  IMPROVEMENTS.md  MANUFACTURERS.md  MISSION.md  ORDERING_GUIDE.md  QUICK_ORDER.md  ROADMAP.md  SAFETY_ALGORITHM.md  SYSTEM_DESIGN.md  VALIDATION_REPORT.md  VOICE_DETECTION.md  full_lineup.html  gen_fav.py  gen_gemini.py  gen_gemini2.py  gen_images.py  gen_kagi_photos.py  kagi_designs.html  kagi_visual.html  koe_designs.html  preview.html  product_lineup.html  schematic_notes.md
hardware/kicad/: kagi-lite.kicad_pcb  kagi-lite.kicad_sch
hardware/renders/: gallery.html
hardware/renders_fav/: gallery.html
hardware/renders_gemini/: gallery.html  gallery2.html
hardware/renders_kagi_new/: gallery.html
iki-ios/: project.yml
iki-ios/IKI/: IKI.entitlements.bak  Info.plist
iki-ios/IKI.xcodeproj/: project.pbxproj
ios/: .gitignore  AppStore_com.enablerdao.kacha.mobileprovision  project.yml
ios/KAGI.xcodeproj/: project.pbxproj
ios/Kacha/: Info.plist  Kacha.entitlements
ios/Kacha.xcodeproj/: project.pbxproj
ios/KachaClip/: GuestClipView.swift  Info.plist  KachaClip.entitlements  KachaClipApp.swift
ios/KachaLiveActivity/: KachaLiveActivity.swift  (+1 more)
manufacturing/: gen_gerbers.py  gen_kicad_pcb.py
marketing/: airbnb_community_post.md  beds24_forum_post.md  beds24_partner_application.md  note_launch_article.md  product_hunt_draft.md  twitter_launch_thread.md  video_script.md
screenshots/: KAGI_song.md
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/site/: index.html
server/src/: guest_page.css  guest_page.js  main.rs  qr_min.js
site/: index.html
(+186 files in other folders)
