[package]
name = "kagi-firmware"
version = "1.0.0"
edition = "2021"
authors = ["KAGI Team"]
description = "KAGI Home - 安否確認デバイスファームウェア"
license = "MIT"

[features]
default = ["lite"]
lite = []
hub = []
pro = ["hub"]

[dependencies]
esp-idf-hal = { version = "0.45", features = ["std"] }
esp-idf-svc = { version = "0.50", features = ["std"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heapless = "0.8"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
